--- a/features/app/src/main/res/layout/fragment_establishment.xml
+++ b/features/app/src/main/res/layout/fragment_establishment.xml
@@ -35,8 +35,8 @@
                 android:id="@+id/arrowBackView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="16dp"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="16dp"
                 android:contentDescription="@string/back_button_description"
                 android:src="@drawable/ic_arrow_back"
                 app:layout_constraintStart_toStartOf="parent"
@@ -46,8 +46,8 @@
                 android:id="@+id/shareView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="16dp"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="16dp"
                 android:contentDescription="@string/share_button_description"
                 android:src="@drawable/ic_share"
                 app:layout_constraintEnd_toEndOf="parent"
